finetune/scripts/.ipynb_checkpoints/aclImdb-checkpoint.err
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 130
    if args.dataset = 'aclImdb':
       ^^^^^^^^^^^^
SyntaxError: cannot assign to attribute here. Maybe you meant '==' instead of '='?
Traceback (most recent call last):
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 15, in <module>
    from local_dataset_utilities import tokenization, setup_dataloaders, get_dataset
ImportError: cannot import name 'tokenization' from 'local_dataset_utilities' (/work/LAS/jannesar-lab/dphuong/fedtext/finetune/local_dataset_utilities.py). Did you mean: 'tokenization_ag'?
Traceback (most recent call last):
  File "/work/LAS/jannesar-lab/dphuong/fedtext/finetune/finetune_lora.py", line 15, in <module>
    from local_dataset_utilities import tokenization, setup_dataloaders, get_dataset
ImportError: cannot import name 'tokenization' from 'local_dataset_utilities' (/work/LAS/jannesar-lab/dphuong/fedtext/finetune/local_dataset_utilities.py). Did you mean: 'tokenization_ag'?
slurmstepd: error: *** JOB 1391114 ON amp-4 CANCELLED AT 2024-06-09T12:33:17 ***
